--- a/HW1/hw1_3.ipynb
+++ b/HW1/hw1_3.ipynb
@@ -4,54 +4,105 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas import read_csv\n",
+    "import matplotlib.pyplot as plt #General Plotting\n",
+    "import numpy as np\n",
+    "from scipy.stats import multivariate_normal\n",
+    "from sklearn.metrics import confusion_matrix\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pandas' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\meuli\\Desktop\\ML\\EECE5644\\HW1\\hw1_3.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/meuli/Desktop/ML/EECE5644/HW1/hw1_3.ipynb#ch0000000?line=0'>1</a>\u001b[0m winedata \u001b[39m=\u001b[39m pandas\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mwinequality-white.csv\u001b[39m\u001b[39m'\u001b[39m, sep \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/meuli/Desktop/ML/EECE5644/HW1/hw1_3.ipynb#ch0000000?line=1'>2</a>\u001b[0m labels \u001b[39m=\u001b[39m winedata[winedata\u001b[39m.\u001b[39mcolumns[\u001b[39m11\u001b[39m]]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/meuli/Desktop/ML/EECE5644/HW1/hw1_3.ipynb#ch0000000?line=2'>3</a>\u001b[0m lables \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(labels)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pandas' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4898, 12)\n",
+      "4898\n",
+      "Num Class Labels:  [  20  163 1457 2198  880  175    5]\n",
+      "Priors:  [0.0040833  0.03327889 0.29746835 0.44875459 0.17966517 0.03572887\n",
+      " 0.00102082]\n",
+      "(7,)\n",
+      "(7, 11)\n",
+      "(7, 11, 11)\n",
+      "[[0.0040833  0.         0.         0.         0.         0.\n",
+      "  0.        ]\n",
+      " [0.         0.03327889 0.         0.         0.         0.\n",
+      "  0.        ]\n",
+      " [0.         0.         0.29746835 0.         0.         0.\n",
+      "  0.        ]\n",
+      " [0.         0.         0.         0.44875459 0.         0.\n",
+      "  0.        ]\n",
+      " [0.         0.         0.         0.         0.17966517 0.\n",
+      "  0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.03572887\n",
+      "  0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.\n",
+      "  0.00102082]]\n",
+      "(4898,)\n",
+      "(7,)\n",
+      "[[   7    2    5   12    2    4    0]\n",
+      " [   1    3    7    6    0    0    0]\n",
+      " [   5  106  929  615  102   16    0]\n",
+      " [   7   50  496 1339  471   79    2]\n",
+      " [   0    2   19  226  302   73    3]\n",
+      " [   0    0    1    0    3    3    0]\n",
+      " [   0    0    0    0    0    0    0]]\n",
+      "Errors 2315 Est P(error) 0.4726418946508779\n"
      ]
     }
    ],
    "source": [
-    "winedata = pandas.read_csv('winequality-white.csv', sep = ';')\n",
-    "labels = winedata[winedata.columns[11]]\n",
-    "lables = np.array(labels)\n",
+    "# fixed acidity;\"volatile acidity\";\"citric acid\";\"residual sugar\";\"chlorides\";\"free sulfur dioxide\";\"total sulfur dioxide\";\"density\";\"pH\";\"sulphates\";\"alcohol\";\"quality\"\n",
+    "winedata = read_csv('winequality-white.csv', sep = ';')\n",
+    "print(winedata.shape) # (4898, 12)\n",
+    "labels = np.array(winedata[winedata.columns[11]])\n",
+    "valid_classes = np.array([3, 4, 5, 6, 7, 8, 9])\n",
     "\n",
-    "X = winedata[winedata.columns[0:11]]\n",
-    "X = np.array(X)\n",
-    "N = len(lables)\n",
+    "X = np.array(winedata[winedata.columns[0:11]])\n",
+    "N = len(labels)\n",
+    "print(N)\n",
     "\n",
-    "# Find Class Statistics\n",
-    "classes, nclass = np.unique(labels, return_counts = True)\n",
-    "C = len(classes)\n",
-    "priors = nclass/N\n",
-    "class_means = np.array([np.mean(X[np.argwhere(labels == c)], axis = 0) for c in classes])\n",
-    "class_cov = np.array([np.cov(X[labels == c].T) for c in classes])\n",
+    "N_cl = np.array([X[labels == i].shape[0] for i in valid_classes])\n",
+    "print(\"Num Class Labels: \", N_cl)\n",
     "\n",
+    "priors = np.array(N_cl/N)\n",
+    "print(\"Priors: \", priors)\n",
+    "print(priors.shape)\n",
+    "\n",
+    "# First derive sample-based estimates of mean vector and covariance matrix:\n",
+    "#mu_hat = np.mean(X, axis=0)\n",
+    "mu_hat = np.array([np.mean(X[labels == i], axis = 0) for i in valid_classes]) # No labelled samples for 0, 1, 2, 10!\n",
+    "print(mu_hat.shape)\n",
+    "\n",
+    "# Regularization\n",
     "# Regularization\n",
     "evals, _ = np.linalg.eig(np.cov(X.T))\n",
     "reg = np.mean(evals)\n",
     "\n",
-    "# Minimum Error Classification\n",
-    "mu = class_means.reshape(C,11)\n",
-    "Sigma = class_cov + reg*np.identity(11)\n",
+    "Sigma_hat = np.array([np.cov(X[labels == i].T)+0.1*np.identity(11) for i in valid_classes]) \n",
+    "print(Sigma_hat.shape)\n",
     "\n",
-    "class_cond_likelihoods = np.array([multivariate_normal.pdf(X, mu[c], Sigma[c]) for c in range(C)])\n",
+    "class_cond_likelihoods = np.array([multivariate_normal.pdf(X, mu_hat[c], Sigma_hat[c]) for c in range(len(valid_classes))])\n",
     "class_priors = np.diag(priors)\n",
+    "print(class_priors)\n",
     "class_posteriors = class_priors.dot(class_cond_likelihoods)\n",
     "\n",
-    "decisions = np.argmax(class_posteriors, axis = 0) + np.min(classes)*np.ones(N) # account for classes starting from 3\n",
+    "decisions = np.argmax(class_posteriors, axis = 0) # account for classes starting from 3\n",
+    "decisions = np.array([i + 3 for i in decisions])\n",
+    "print(decisions.shape)\n",
+    "print(valid_classes.shape)\n",
     "\n",
     "conf_matrix = confusion_matrix(decisions, labels)\n",
     "print(conf_matrix)\n",
     "\n",
     "errors = len(np.argwhere(decisions != labels))\n",
-    "print('Errors', errors, \"Est P(error)\", errors/N)\n"
+    "print('Errors', errors, \"Est P(error)\", errors/N)"
    ]
   },
   {
@@ -97,6 +148,59 @@
     "# ...\n",
     "\n",
     "cd = np.argwh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fixed acidity;\"volatile acidity\";\"citric acid\";\"residual sugar\";\"chlorides\";\"free sulfur dioxide\";\"total sulfur dioxide\";\"density\";\"pH\";\"sulphates\";\"alcohol\";\"quality\"\n",
+    "winedata = read_csv('winequality-white.csv', sep = ';')\n",
+    "print(winedata.shape) # (4898, 12)\n",
+    "labels = np.array(winedata[winedata.columns[11]])\n",
+    "\n",
+    "X = np.array(winedata[winedata.columns[0:11]])\n",
+    "N = len(labels)\n",
+    "\n",
+    "# Find Class Statistics\n",
+    "classes, nclass = np.unique(labels, return_counts = True)\n",
+    "C = len(classes)\n",
+    "priors = nclass/N\n",
+    "class_means = np.array([np.mean(X[np.argwhere(labels == c)], axis = 0) for c in classes])\n",
+    "class_cov = np.array([np.cov(X[labels == c].T) for c in classes])\n",
+    "# print(class_cov[4])\n",
+    "# Regularization\n",
+    "evals, _ = np.linalg.eig(np.cov(X.T))\n",
+    "reg = np.mean(evals)\n",
+    "print(reg)\n",
+    "\n",
+    "# Minimum Error Classification\n",
+    "mu = class_means.reshape(C,11)\n",
+    "Sigma = class_cov + reg*np.identity(11)\n",
+    "\n",
+    "class_cond_likelihoods = np.array([multivariate_normal.pdf(X, mu[c], Sigma[c]) for c in range(C)])\n",
+    "class_priors = np.diag(priors)\n",
+    "class_posteriors = class_priors.dot(class_cond_likelihoods)\n",
+    "\n",
+    "decisions = np.argmax(class_posteriors, axis = 0) + np.min(classes)*np.ones(N) # account for classes starting from 3\n",
+    "\n",
+    "print(decisions.shape)\n",
+    "print(labels.shape)\n",
+    "\n",
+    "conf_matrix = confusion_matrix(decisions, labels)\n",
+    "print(conf_matrix)\n",
+    "\n",
+    "errors = len(np.argwhere(decisions != labels))\n",
+    "print('Errors', errors, \"Est P(error)\", errors/N)\n"
    ]
   }
  ],
