--- a/HW1/hw1_3.ipynb
+++ b/HW1/hw1_3.ipynb
@@ -15,86 +15,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4898, 12)\n",
-      "4898\n",
+      "Valid Classes:  [3 4 5 6 7 8 9]\n",
+      "Num samples:  4898\n",
       "Num Class Labels:  [  20  163 1457 2198  880  175    5]\n",
       "Priors:  [0.0040833  0.03327889 0.29746835 0.44875459 0.17966517 0.03572887\n",
-      " 0.00102082]\n",
-      "(7,)\n",
-      "(7, 11)\n",
-      "(7, 11, 11)\n",
-      "[[0.0040833  0.         0.         0.         0.         0.\n",
-      "  0.        ]\n",
-      " [0.         0.03327889 0.         0.         0.         0.\n",
-      "  0.        ]\n",
-      " [0.         0.         0.29746835 0.         0.         0.\n",
-      "  0.        ]\n",
-      " [0.         0.         0.         0.44875459 0.         0.\n",
-      "  0.        ]\n",
-      " [0.         0.         0.         0.         0.17966517 0.\n",
-      "  0.        ]\n",
-      " [0.         0.         0.         0.         0.         0.03572887\n",
-      "  0.        ]\n",
-      " [0.         0.         0.         0.         0.         0.\n",
-      "  0.00102082]]\n",
-      "(4898,)\n",
-      "(7,)\n",
-      "[[   7    2    5   12    2    4    0]\n",
-      " [   1    3    7    6    0    0    0]\n",
-      " [   5  106  929  615  102   16    0]\n",
-      " [   7   50  496 1339  471   79    2]\n",
-      " [   0    2   19  226  302   73    3]\n",
-      " [   0    0    1    0    3    3    0]\n",
-      " [   0    0    0    0    0    0    0]]\n",
-      "Errors 2315 Est P(error) 0.4726418946508779\n"
+      " 0.00102082]\n"
      ]
     }
    ],
    "source": [
     "# fixed acidity;\"volatile acidity\";\"citric acid\";\"residual sugar\";\"chlorides\";\"free sulfur dioxide\";\"total sulfur dioxide\";\"density\";\"pH\";\"sulphates\";\"alcohol\";\"quality\"\n",
     "winedata = read_csv('winequality-white.csv', sep = ';')\n",
-    "print(winedata.shape) # (4898, 12)\n",
     "labels = np.array(winedata[winedata.columns[11]])\n",
     "valid_classes = np.array([3, 4, 5, 6, 7, 8, 9])\n",
+    "print(\"Valid Classes: \", valid_classes)\n",
     "\n",
     "X = np.array(winedata[winedata.columns[0:11]])\n",
     "N = len(labels)\n",
-    "print(N)\n",
+    "print(\"Num samples: \", N)\n",
     "\n",
     "N_cl = np.array([X[labels == i].shape[0] for i in valid_classes])\n",
     "print(\"Num Class Labels: \", N_cl)\n",
     "\n",
     "priors = np.array(N_cl/N)\n",
     "print(\"Priors: \", priors)\n",
-    "print(priors.shape)\n",
+    "\n",
+    "C = len(priors)\n",
     "\n",
     "# First derive sample-based estimates of mean vector and covariance matrix:\n",
     "#mu_hat = np.mean(X, axis=0)\n",
     "mu_hat = np.array([np.mean(X[labels == i], axis = 0) for i in valid_classes]) # No labelled samples for 0, 1, 2, 10!\n",
-    "print(mu_hat.shape)\n",
     "\n",
-    "# Regularization\n",
-    "# Regularization\n",
-    "evals, _ = np.linalg.eig(np.cov(X.T))\n",
-    "reg = np.mean(evals)\n",
+    "# Small regularization term\n",
+    "reg = 0.1*np.identity(11) #7x11\n",
     "\n",
-    "Sigma_hat = np.array([np.cov(X[labels == i].T)+0.1*np.identity(11) for i in valid_classes]) \n",
-    "print(Sigma_hat.shape)\n",
+    "Sigma_hat = np.array([np.cov(X[labels == i].T) + reg for i in valid_classes]) #7x11x11\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "class_cond_likelihoods = np.array([multivariate_normal.pdf(X, mu_hat[c], Sigma_hat[c]) for c in range(len(valid_classes))])\n",
-    "class_priors = np.diag(priors)\n",
-    "print(class_priors)\n",
-    "class_posteriors = class_priors.dot(class_cond_likelihoods)\n",
+    "priors_diag = np.diag(priors)\n",
+    "class_posteriors = priors_diag.dot(class_cond_likelihoods)\n",
     "\n",
-    "decisions = np.argmax(class_posteriors, axis = 0) # account for classes starting from 3\n",
-    "decisions = np.array([i + 3 for i in decisions])\n",
+    "decisions = np.argmax(class_posteriors, axis = 0) \n",
+    "decisions = np.array([i + valid_classes[0] for i in decisions]) # labels start at 3...\n",
     "print(decisions.shape)\n",
     "print(valid_classes.shape)\n",
     "\n",
@@ -103,6 +80,34 @@
     "\n",
     "errors = len(np.argwhere(decisions != labels))\n",
     "print('Errors', errors, \"Est P(error)\", errors/N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot for original data and their true labels\n",
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "marker_shapes = '....'\n",
+    "marker_colors = 'rbgy' \n",
+    "\n",
+    "for i in range(C):\n",
+    "\n",
+    "    # Find indices of u that meet each prior\n",
+    "    indices = np.argwhere((thresholds[i] <= u) & (u <= thresholds[i+1]))[:, 0]\n",
+    "\n",
+    "    # Get the number of indices in each component - should be ~ 6500 and 3500\n",
+    "    Nl = len(indices)\n",
+    "    \n",
+    "    # set label vector based on above - will be vector of class labels [0 0 1 0 1 .. to 9999] in this case\n",
+    "    # for more classes, this can be [1 2 2 0 1 3 1 3 0 ...]\n",
+    "    labels[indices] = i * np.ones(Nl)\n",
+    "    \n",
+    "    # for each valid index, fill the \n",
+    "    X[indices, :] = multivariate_normal.rvs(mu[i], sigma[i], Nl)\n",
+    "    plt.plot(X[labels==i, 0], X[labels==i, 1], marker_shapes[i-1] + marker_colors[i-1], label=\"True Class {}\".format(i))\n"
    ]
   },
   {
@@ -188,8 +193,8 @@
     "Sigma = class_cov + reg*np.identity(11)\n",
     "\n",
     "class_cond_likelihoods = np.array([multivariate_normal.pdf(X, mu[c], Sigma[c]) for c in range(C)])\n",
-    "class_priors = np.diag(priors)\n",
-    "class_posteriors = class_priors.dot(class_cond_likelihoods)\n",
+    "priors_diag = np.diag(priors)\n",
+    "class_posteriors = priors_diag.dot(class_cond_likelihoods)\n",
     "\n",
     "decisions = np.argmax(class_posteriors, axis = 0) + np.min(classes)*np.ones(N) # account for classes starting from 3\n",
     "\n",
