full update prior to hw1 submission

--- a/HW2/s_hw2_2.ipynb
+++ b/HW2/s_hw2_2.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from numpy.matlib import repmat\n",
+    "\"from numpy.matlib import repmat\n",
     "import matplotlib.pyplot as plt\n",
     "# from scipy.stats import multivariate_normal\n",
     "from numpy.linalg import norm"
