--- a/Credit_Card_Fraud_Detection/FraudDetection.ipynb
+++ b/Credit_Card_Fraud_Detection/FraudDetection.ipynb
@@ -42,6 +42,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "# Figure out os import\n",
+    "import os\n",
     "data = pd.read_csv('creditcard.csv')\n",
     "\n",
     "\n",
